[gd_scene load_steps=27 format=2]

[ext_resource path="res://Prefabs/Styles/Background_LightBlue.tres" type="StyleBox" id=1]
[ext_resource path="res://Prefabs/Styles/Fonts/Size100.tres" type="DynamicFont" id=2]
[ext_resource path="res://Prefabs/Styles/Fonts/Size40.tres" type="DynamicFont" id=3]
[ext_resource path="res://Prefabs/Elements/CurTime.gd" type="Script" id=4]
[ext_resource path="res://Prefabs/Elements/CheckinControl.tscn" type="PackedScene" id=5]
[ext_resource path="res://Prefabs/Elements/TotalCurMonth.gd" type="Script" id=6]
[ext_resource path="res://Assets/Icons/to-do-list.png" type="Texture" id=7]
[ext_resource path="res://Assets/Icons/settings.png" type="Texture" id=8]
[ext_resource path="res://Assets/Icons/sales.png" type="Texture" id=9]
[ext_resource path="res://Prefabs/Elements/Status.gd" type="Script" id=10]
[ext_resource path="res://Prefabs/Screens/MainScreen.gd" type="Script" id=11]
[ext_resource path="res://Prefabs/Styles/Panel/BottomScreen.tres" type="StyleBox" id=12]
[ext_resource path="res://Prefabs/Shaders/MenuBtn.tres" type="Material" id=13]
[ext_resource path="res://Prefabs/Elements/CalendarButton.tscn" type="PackedScene" id=14]
[ext_resource path="res://Assets/Icons/fast-forward-button.png" type="Texture" id=15]
[ext_resource path="res://Assets/Icons/fast-backward.png" type="Texture" id=16]
[ext_resource path="res://Assets/Icons/left-arrow.png" type="Texture" id=17]
[ext_resource path="res://Prefabs/Elements/CurMonth.gd" type="Script" id=18]
[ext_resource path="res://Prefabs/Elements/VMonth.gd" type="Script" id=19]
[ext_resource path="res://Prefabs/Elements/DayInfo.tscn" type="PackedScene" id=20]
[ext_resource path="res://Prefabs/Elements/CurDay.gd" type="Script" id=21]
[ext_resource path="res://Prefabs/Elements/CurrentDateInfo.gd" type="Script" id=22]
[ext_resource path="res://Prefabs/Elements/CategoryPanel.tscn" type="PackedScene" id=23]
[ext_resource path="res://Prefabs/Elements/SaloryCalculation.tscn" type="PackedScene" id=24]
[ext_resource path="res://Prefabs/Elements/MenuBtn2.tscn" type="PackedScene" id=25]
[ext_resource path="res://Prefabs/Elements/TotalItem.tscn" type="PackedScene" id=26]

[node name="MainScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = ExtResource( 1 )

[node name="TimeScreen" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Status" type="Label" parent="TimeScreen"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = -144.0
margin_right = -20.0
margin_bottom = -96.0
custom_colors/font_color = Color( 0.498039, 0.768627, 0.992157, 1 )
custom_fonts/font = ExtResource( 3 )
text = "Idle"
align = 1
valign = 1
script = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CurTime" type="Label" parent="TimeScreen"]
anchor_right = 1.0
margin_top = 288.0
margin_bottom = 406.0
custom_colors/font_color = Color( 0.14902, 0.6, 0.984314, 1 )
custom_fonts/font = ExtResource( 2 )
text = "10:30"
align = 1
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Date" type="Label" parent="TimeScreen/CurTime"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -14.0
custom_colors/font_color = Color( 0.498039, 0.768627, 0.992157, 1 )
custom_fonts/font = ExtResource( 3 )
text = "Mon, June 6, 2022"
align = 1
valign = 1

[node name="Seconds" type="Label" parent="TimeScreen/CurTime"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 129.0
margin_top = -59.0
margin_right = 175.0
margin_bottom = 59.0
custom_colors/font_color = Color( 0.498039, 0.768627, 0.992157, 1 )
custom_fonts/font = ExtResource( 3 )
text = "30"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CheckinControl" parent="TimeScreen" instance=ExtResource( 5 )]

[node name="CalendarScreen" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TopMenu" type="Panel" parent="CalendarScreen"]
anchor_right = 1.0
rect_min_size = Vector2( 0, 180 )
custom_styles/panel = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CurMonth" type="Label" parent="CalendarScreen/TopMenu"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -48.0
custom_fonts/font = ExtResource( 3 )
text = "Januray 2022"
align = 1
script = ExtResource( 18 )

[node name="NextMonth" parent="CalendarScreen/TopMenu/CurMonth" instance=ExtResource( 14 )]
material = ExtResource( 13 )
focus_mode = 0

[node name="NextYear" parent="CalendarScreen/TopMenu/CurMonth" instance=ExtResource( 14 )]
material = ExtResource( 13 )
margin_left = -170.0
margin_right = -120.0
focus_mode = 0
icon = ExtResource( 15 )

[node name="PrevMonth" parent="CalendarScreen/TopMenu/CurMonth" instance=ExtResource( 14 )]
material = ExtResource( 13 )
anchor_left = 0.0
anchor_right = 0.0
margin_left = 0.0
margin_right = 50.0
icon = ExtResource( 17 )

[node name="PrevYear" parent="CalendarScreen/TopMenu/CurMonth" instance=ExtResource( 14 )]
material = ExtResource( 13 )
anchor_left = 0.0
anchor_right = 0.0
margin_left = 112.0
margin_right = 162.0
icon = ExtResource( 16 )

[node name="VMonth" type="GridContainer" parent="CalendarScreen"]
anchor_right = 1.0
margin_left = 40.0
margin_top = 184.0
margin_right = -40.0
margin_bottom = 522.0
custom_constants/vseparation = 10
custom_constants/hseparation = 20
columns = 7
script = ExtResource( 19 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WeekDay01" type="Label" parent="CalendarScreen/VMonth"]
margin_right = 74.0
margin_bottom = 48.0
grow_horizontal = 0
size_flags_horizontal = 3
custom_colors/font_color = Color( 0.14902, 0.6, 0.984314, 1 )
custom_fonts/font = ExtResource( 3 )
text = "1"
align = 1

[node name="WeekDay02" type="Label" parent="CalendarScreen/VMonth"]
margin_left = 94.0
margin_right = 168.0
margin_bottom = 48.0
grow_horizontal = 0
size_flags_horizontal = 3
custom_colors/font_color = Color( 0.14902, 0.6, 0.984314, 1 )
custom_fonts/font = ExtResource( 3 )
text = "1"
align = 1

[node name="WeekDay03" type="Label" parent="CalendarScreen/VMonth"]
margin_left = 188.0
margin_right = 262.0
margin_bottom = 48.0
grow_horizontal = 0
size_flags_horizontal = 3
custom_colors/font_color = Color( 0.14902, 0.6, 0.984314, 1 )
custom_fonts/font = ExtResource( 3 )
text = "1"
align = 1

[node name="WeekDay04" type="Label" parent="CalendarScreen/VMonth"]
margin_left = 282.0
margin_right = 356.0
margin_bottom = 48.0
grow_horizontal = 0
size_flags_horizontal = 3
custom_colors/font_color = Color( 0.14902, 0.6, 0.984314, 1 )
custom_fonts/font = ExtResource( 3 )
text = "1"
align = 1

[node name="WeekDay05" type="Label" parent="CalendarScreen/VMonth"]
margin_left = 376.0
margin_right = 450.0
margin_bottom = 48.0
grow_horizontal = 0
size_flags_horizontal = 3
custom_colors/font_color = Color( 0.14902, 0.6, 0.984314, 1 )
custom_fonts/font = ExtResource( 3 )
text = "1"
align = 1

[node name="WeekDay06" type="Label" parent="CalendarScreen/VMonth"]
margin_left = 470.0
margin_right = 544.0
margin_bottom = 48.0
grow_horizontal = 0
size_flags_horizontal = 3
custom_colors/font_color = Color( 0.14902, 0.6, 0.984314, 1 )
custom_fonts/font = ExtResource( 3 )
text = "1"
align = 1

[node name="WeekDay07" type="Label" parent="CalendarScreen/VMonth"]
margin_left = 564.0
margin_right = 638.0
margin_bottom = 48.0
grow_horizontal = 0
size_flags_horizontal = 3
custom_colors/font_color = Color( 0.14902, 0.6, 0.984314, 1 )
custom_fonts/font = ExtResource( 3 )
text = "1"
align = 1

[node name="Scroll" type="ScrollContainer" parent="CalendarScreen"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 582.0
margin_bottom = -98.0
scroll_horizontal_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CalendarScreen/Scroll"]
margin_right = 720.0
margin_bottom = 252.0
size_flags_horizontal = 3
alignment = 1
script = ExtResource( 22 )

[node name="CurDay" type="Label" parent="CalendarScreen/Scroll/VBoxContainer"]
margin_right = 720.0
margin_bottom = 48.0
custom_colors/font_color = Color( 0.14902, 0.6, 0.984314, 1 )
custom_fonts/font = ExtResource( 3 )
text = "Today Day"
align = 1
valign = 1
script = ExtResource( 21 )

[node name="DayInfo" parent="CalendarScreen/Scroll/VBoxContainer" instance=ExtResource( 20 )]
margin_top = 52.0
margin_bottom = 252.0

[node name="SettingsScreen" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="SettingsScreen"]
anchor_right = 1.0
margin_bottom = 100.0
rect_min_size = Vector2( 0, 100 )
custom_styles/panel = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="SettingsScreen"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 100.0
margin_bottom = -92.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="SettingsScreen/ScrollContainer"]
margin_right = 720.0
margin_bottom = 1088.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="CategoryPanel" parent="SettingsScreen/ScrollContainer/VBoxContainer" instance=ExtResource( 23 )]
anchor_right = 0.0
margin_right = 720.0
margin_bottom = 40.0
CategoryText = "Auto Salary Calculation"

[node name="SaloryCalculation" parent="SettingsScreen/ScrollContainer/VBoxContainer" instance=ExtResource( 24 )]
anchor_right = 0.0
margin_top = 44.0
margin_right = 720.0
margin_bottom = 244.0

[node name="TotalsScreen" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TopMenu" type="Panel" parent="TotalsScreen"]
anchor_right = 1.0
rect_min_size = Vector2( 0, 180 )
custom_styles/panel = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CurMonth" type="Label" parent="TotalsScreen/TopMenu"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -48.0
custom_fonts/font = ExtResource( 3 )
text = "This month [June - 2022]"
align = 1
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NextMonth" parent="TotalsScreen/TopMenu/CurMonth" instance=ExtResource( 14 )]
material = ExtResource( 13 )

[node name="PrevMonth" parent="TotalsScreen/TopMenu/CurMonth" instance=ExtResource( 14 )]
material = ExtResource( 13 )
anchor_left = 0.0
anchor_right = 0.0
margin_left = 0.0
margin_right = 50.0
icon = ExtResource( 17 )

[node name="Scroll" type="ScrollContainer" parent="TotalsScreen"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 184.0
margin_bottom = -97.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBox" type="VBoxContainer" parent="TotalsScreen/Scroll"]
margin_right = 720.0
margin_bottom = 999.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TotalItem" parent="TotalsScreen/Scroll/VBox" instance=ExtResource( 26 )]

[node name="BottomUI" type="Panel" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -89.0
custom_styles/panel = ExtResource( 12 )

[node name="HBoxContainer" type="HBoxContainer" parent="BottomUI"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 20.0
margin_top = -30.0
margin_right = -20.0
margin_bottom = 30.0
custom_constants/separation = 20
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CheckIn" parent="BottomUI/HBoxContainer" instance=ExtResource( 25 )]
margin_right = 155.0
Pressed = true
BtnGroup = "Menu"

[node name="Calendar" parent="BottomUI/HBoxContainer" instance=ExtResource( 25 )]
margin_left = 175.0
margin_right = 330.0
texture = ExtResource( 7 )
BtnGroup = "Menu"

[node name="Totals" parent="BottomUI/HBoxContainer" instance=ExtResource( 25 )]
margin_left = 350.0
margin_right = 505.0
texture = ExtResource( 9 )
BtnGroup = "Menu"

[node name="Settings" parent="BottomUI/HBoxContainer" instance=ExtResource( 25 )]
margin_left = 525.0
margin_right = 680.0
texture = ExtResource( 8 )
BtnGroup = "Menu"

[connection signal="BtnPressed" from="BottomUI/HBoxContainer/CheckIn" to="." method="_on_CheckIn_BtnPressed"]
[connection signal="BtnPressed" from="BottomUI/HBoxContainer/Calendar" to="." method="_on_Calendar_BtnPressed"]
[connection signal="BtnPressed" from="BottomUI/HBoxContainer/Totals" to="." method="_on_Totals_BtnPressed"]
[connection signal="BtnPressed" from="BottomUI/HBoxContainer/Settings" to="." method="_on_Settings_BtnPressed"]
